D05 cleanup + split (2023)